@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          tests rewritten to use Test::Deep::UnorderedPairs (Karen Etheridge)
 
 0.005     2013-07-28 21:53:59 America/New_York
           only test fixes: should now pass on Win32
